<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/app_background">
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true" android:layout_marginTop="20dp" android:orientation="vertical"
                  android:id="@+id/linearLayout">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testParamsTitle"
                android:id="@+id/textView"
                android:textSize="25sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp"
                  android:text="@string/prevision"
                  android:layout_marginTop="15dp"/>
        <include
                android:id="@+id/subCategory"
                layout="@layout/calview"/>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:orientation="horizontal" android:layout_marginTop="25dp"
                  android:layout_centerHorizontal="true" android:layout_below="@+id/linearLayout">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/delay" android:textSize="18sp" android:layout_marginRight="5dp"/>
        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/delay"
                  android:hint="@string/delay_spe" android:textSize="18sp" android:inputType="textMultiLine"/>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:layout_alignParentBottom="true">
        <Button android:layout_width="75dp" android:layout_height="wrap_content"
                android:text="@string/def" android:id="@+id/but_def" android:background="@drawable/button_style1"
                android:layout_marginRight="15dp"/>
        <Button android:layout_width="120dp" android:layout_height="wrap_content"
                android:text="@string/main_params" android:id="@+id/button_main"
                android:background="@drawable/button_style1" android:layout_marginRight="15dp"/>
        <Button android:layout_width="100dp" android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/button_start" android:background="@drawable/button_style1"/>
    </LinearLayout>

</RelativeLayout>