<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/app_background">
    <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IndoorTempLabel"
                    android:id="@+id/IndoorTempLabel"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NoValue"
                    android:id="@+id/IndoorTempValue"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OutdoorTempLabel"
                    android:id="@+id/OutdoorTempLabel"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NoValue"
                    android:id="@+id/OutdoorTempValue"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IndoorHumLabel"
                    android:id="@+id/IndoorHumLabel"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NoValue"
                    android:id="@+id/IndoorHumValue"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OutdoorHumLabel"
                    android:id="@+id/OutdoorHumLabel"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NoValue"
                    android:id="@+id/OutdoorHumValue"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CO2Label"
                    android:id="@+id/CO2Label"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NoValue"
                    android:id="@+id/CO2Value"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IndoorLumLabel"
                    android:id="@+id/IndoorLumLabel"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NoValue"
                    android:id="@+id/IndoorLumValue"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OutdoorLumLabel"
                    android:id="@+id/OutdoorLumLabel"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NoValue"
                    android:id="@+id/OutdoorLumValue"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView
                    android:id="@+id/contexttv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contextetv"
                    android:textSize="18sp"/>
            <TextView
                    android:id="@+id/context_state"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disconnected"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/oeptv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oeptv"
                    android:textSize="18sp"/>
            <TextView
                    android:id="@+id/oep_state"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disconnected"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/regulationtv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/regulationtetv"
                    android:textSize="18sp"/>
            <TextView
                    android:id="@+id/regulation_state"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disconnected"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/knxtv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/knxtv"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_marginLeft="20dp"
                    android:id="@+id/knx_state"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disconnected"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/user"
                      android:textSize="18sp" android:layout_marginRight="5dp"/>
            <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textSize="18sp"
                      android:id="@+id/etuser"
                      android:layout_marginLeft="20dp"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/vote"
                      android:textSize="18sp" android:layout_marginRight="5dp"/>
            <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textSize="18sp"
                      android:id="@+id/etvote"
                      android:layout_marginLeft="20dp"/>
        </TableRow>
    </TableLayout>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/bvote"
            android:background="@drawable/button_style1" android:text="@string/send"
            android:layout_gravity="center_horizontal"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prog_none"
              android:textSize="18sp" android:layout_marginTop="30dp" android:id="@+id/tvProg"/>
</LinearLayout>